Resultados terminal/max GA.txt
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> javac Server.java
Server.java:58: error: unmappable character (0x8D) for encoding windows-1252
            // --- CORRE├ç├âO CR├?TICA: FOR├çAR UTF-8 ---
                                 ^
1 error
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> javac Server.java
Server.java:58: error: unmappable character (0x8D) for encoding windows-1252
            // --- CORRE├ç├âO CR├?TICA: FOR├çAR UTF-8 ---
                                 ^
1 error
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> javac Server.java
PS C:\Users\Gaming\Desktop\ProjetoOtimizador> java Server      
>>> [JAVA] SERVIDOR PRONTO EM: http://localhost:8080

>>> [JAVA] INICIANDO: GA -> modelo10.exe
[PYTHON]: DEBUG: Executavel encontrado: modelo10.exe
[PYTHON]: DEBUG: Config: ga, Dim: 9
[PYTHON]: DEBUG: Iniciando loop principal...
[PYTHON]: {"iteracao": 1, "ga_best": 403.57}
[PYTHON]: {"iteracao": 2, "ga_best": 403.57}
[PYTHON]: {"iteracao": 3, "ga_best": 522.66}
[PYTHON]: {"iteracao": 4, "ga_best": 612.21}
[PYTHON]: {"iteracao": 5, "ga_best": 612.21}
[PYTHON]: {"iteracao": 6, "ga_best": 612.21}
[PYTHON]: {"iteracao": 7, "ga_best": 612.21}
[PYTHON]: {"iteracao": 8, "ga_best": 619.66}
[PYTHON]: {"iteracao": 9, "ga_best": 619.66}
[PYTHON]: {"iteracao": 10, "ga_best": 619.66}
[PYTHON]: {"iteracao": 11, "ga_best": 619.66}
[PYTHON]: {"iteracao": 12, "ga_best": 633.87}
[PYTHON]: {"iteracao": 13, "ga_best": 633.87}
[PYTHON]: {"iteracao": 14, "ga_best": 733.96}
[PYTHON]: {"iteracao": 15, "ga_best": 753.1}
[PYTHON]: {"iteracao": 16, "ga_best": 767.3}
[PYTHON]: {"iteracao": 17, "ga_best": 771.6}
[PYTHON]: {"iteracao": 18, "ga_best": 771.6}
[PYTHON]: {"iteracao": 19, "ga_best": 771.6}
[PYTHON]: {"iteracao": 20, "ga_best": 784.46}
[PYTHON]: {"iteracao": 21, "ga_best": 784.46}
[PYTHON]: {"iteracao": 22, "ga_best": 790.16}
[PYTHON]: {"iteracao": 23, "ga_best": 790.16}
[PYTHON]: {"iteracao": 24, "ga_best": 790.16}
[PYTHON]: {"iteracao": 25, "ga_best": 792.01}
[PYTHON]: {"iteracao": 26, "ga_best": 792.01}
[PYTHON]: {"iteracao": 27, "ga_best": 792.01}
[PYTHON]: {"iteracao": 28, "ga_best": 792.01}
[PYTHON]: {"iteracao": 29, "ga_best": 792.01}
[PYTHON]: {"iteracao": 30, "ga_best": 793.16}
[PYTHON]: {"iteracao": 31, "ga_best": 793.16}
[PYTHON]: {"iteracao": 32, "ga_best": 793.16}
[PYTHON]: {"iteracao": 33, "ga_best": 793.16}
[PYTHON]: {"iteracao": 34, "ga_best": 793.16}
[PYTHON]: {"iteracao": 35, "ga_best": 793.16}
[PYTHON]: {"iteracao": 36, "ga_best": 796.2}
[PYTHON]: {"iteracao": 37, "ga_best": 796.2}
[PYTHON]: {"iteracao": 38, "ga_best": 796.2}
[PYTHON]: {"iteracao": 39, "ga_best": 841.0}
[PYTHON]: {"iteracao": 40, "ga_best": 844.04}
[PYTHON]: {"iteracao": 41, "ga_best": 844.04}
[PYTHON]: {"iteracao": 42, "ga_best": 844.04}
[PYTHON]: {"iteracao": 43, "ga_best": 851.82}
[PYTHON]: {"iteracao": 44, "ga_best": 857.75}
[PYTHON]: {"iteracao": 45, "ga_best": 857.75}
[PYTHON]: {"iteracao": 46, "ga_best": 857.75}
[PYTHON]: {"iteracao": 47, "ga_best": 857.75}
[PYTHON]: {"iteracao": 48, "ga_best": 857.75}
[PYTHON]: {"iteracao": 49, "ga_best": 863.77}
[PYTHON]: {"iteracao": 50, "ga_best": 863.77}
[PYTHON]: DEBUG: Finalizado com sucesso.
